# LangControl

./: .flake8  .gitignore  .pre-commit-config.yaml  pyproject.toml  tox.ini
langcontroller/: __init__.py  __main__.py  cli.py  utils.py
langcontroller/controllers/: __init__.py  base.py  generic.py  marvin.py  structs.py
langcontroller/middleware/: __init__.py
langcontroller/processors/: __init__.py  base.py  llama.py  marvin.py
langcontroller/templates/: cli_file.jinja2  command_file.jinja2  command_file.py.jinja2  command_function_no_source.jinja2  command_function_with_source.jinja2  models_class.jinja2  models_file.jinja2  models_file.py.jinja2  pipeline_file.jinja2  pipeline_file.py.jinja2  pipeline_function_no_source.jinja2  pipeline_function_with_source.jinja2  prompt_command_no_source.jinja2  prompt_command_with_source.jinja2  pyproject_file.toml.jinja2
langcontroller/templates/docs/: dataflow.mermaid.j2  interface.mermaid.j2
langcontroller/templates/features/: append_asset-no-source_class.py.j2  append_asset-with-source_class.py.j2  append_asset_class.py.j2  append_sensor_class.py.j2  create_features_file.py.j2
langcontroller/templates/manage/: create_manage_file.py.j2
langcontroller/templates/models/: append_marvin_class.py.j2  append_pydantic_class.py.j2  create_models_file.py.j2
langcontroller/templates/pipeline/: append_asset-no-source_function.py.j2  append_asset-with-source_function.py.j2  append_asset_function.py.j2  append_sensor_function.py.j2  create_pipeline_file.py.j2
langcontroller/templates/prompt_templates/: create_asset-no-source_file.j2.j2  create_asset_file.j2.j2  create_prompt-base_file.j2.j2  create_sensor_file.j2.j2
langcontroller/templates/pyproject/: create_pyproject_file.toml.j2
langcontroller/templates/repository/: append_asset_class.py.j2  append_sensor_class.py.j2  create_repository_file.py.j2
langcontroller/templates/tests/: append_pipeline_class.py.j2
langcontroller/templates/top_level/: create_gitignore_file.gitignore.j2  create_pyproject_file.toml.j2  create_tox_file.ini.j2
tests/: __init__.py  test_cli_do_project.py
