[tool.poetry]
name = "LangController"
version = "0.1.2"
description = "A Framework for LLM Applications. Inspired by Django, Laravel, and Meltano."
authors = ["Jacob Silva <jacob.silva@regulated.cloud>"]
readme = "README.md"


[tool.poetry.scripts]
langcontroller = "langcontroller:app"

[tool.poetry.dependencies]
python = "^3.10"
jinja2 = "^3.1.2"
typer = { extras = ["all"], version = "^0.9.0" }
python-slugify = "^8.0.1"

[tool.poetry.group.marvin.dependencies]
marvin = "^1.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
hypothesis = "^6.82.6"
docformatter = "^1.7.5"

[tool.poetry.group.dagster.dependencies]
dagster = "^1.4.7"
dagster-webserver = "^1.4.7"

[tool.docformatter]
recursive = true
blank = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
