[tool.poetry]
name = "LangController"
version = "0.1.1"
description = "A Framework for LLM Applications. Inspired by Django, Laravel, and Meltano."
authors = ["Jacob Silva <jacob.silva@regulated.cloud>"]
readme = "README.md"


[tool.poetry.scripts]
langcontroller = "langcontroller:app"

[tool.poetry.dependencies]
python = "^3.10"
jinja2 = "^3.1.2"
loguru = "^0.7.0"
opentelemetry-api = "^1.19.0"
opentelemetry-distro = "^0.40b0"
opentelemetry-exporter-otlp = "^1.19.0"
opentelemetry-instrumentation-fastapi = "^0.40b0"
opentelemetry-sdk = "^1.19.0"
python-slugify = "^8.0.1"
typer = { extras = ["all"], version = "^0.9.0" }

[tool.poetry.group.llama.dependencies]
llama-index = "^0.8.12"

[tool.poetry.group.marvin.dependencies]
marvin = "^1.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
bandit = {extras = ["toml"], version = "^1.7.5"}
black = "^23.7.0"
docformatter = "^1.7.5"
hypothesis = "^6.82.6"
pydocstyle = {extras = ["toml"], version = "^6.3.0"}
mypy = "^1.5.1"

[tool.poetry.group.dagster.dependencies]
dagster = "^1.4.7"
dagster-webserver = "^1.4.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
